# schism

./: .clang-format  .gitignore  .gitmodules  :w  CMakeLists.txt  README.md  cmake_build.sh  cmake_generate.sh  vcpkg.json
.github/workflows/: build.yml
res/scripts/: test.lua
src/chess/: BoardRenderer.cpp  BoardRenderer.h  Chess.cpp  Chess.h  ChessEvents.h  Common.h  Engine.cpp  Engine.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h
src/chess/Server/: Client.cpp  Client.h  Game.cpp  Game.h  Messages.h  Server.cpp  Server.h
src/game/: Game.cpp  Game.h  main.cpp
src/schism/: Schism.h  pch.h
src/schism/Audio/: Source.cpp  Source.h  WavLoader.cpp  WavLoader.h
src/schism/Components/: Sprite.h  Transform2D.h
src/schism/Core/: Application.cpp  Application.h  AssetManager.h  Assets.h  Display.cpp  Display.h  DisplayUtils.cpp  DisplayUtils.h  ResourceGlobals.h  Resources.h  SceneManager.cpp  SceneManager.h  SharedContext.h  Timestep.h  Window.cpp  Window.h  WindowData.h  WindowUtil.h
src/schism/Core/EventHandlers/: EventAdapterBase.h  EventManager.cpp  EventManager.h  KeyboardEventHandler.cpp  KeyboardEventHandler.h  MouseEventHandler.cpp  MouseEventHandler.h
src/schism/Core/Events/: Event.h  KeyEvents.h  Keyboard.h  Mouse.h  MouseEvents.h  WindowEvents.h
src/schism/Game/: Entity.h  SceneBase.cpp  SceneBase.h
src/schism/Game/Ecs/: Component.h  Plugin.h  View.h
src/schism/Game/Ecs/detail/: PluginBase.h
src/schism/Game/GameEvent/: CallbackBus.h  CallbackListener.h  SyncBus.h  SyncListener.h
src/schism/Gl/: Buffer.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/schism/Interfaces/: ICamera.h  IScene.cpp  IScene.h
src/schism/Renderer/: OrthographicCamera.cpp  OrthographicCamera.h  RenderAPI.cpp  RenderAPI.h  Renderer2D.cpp  Renderer2D.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/schism/Sandbox/: SampleScene.cpp  SampleScene.h  Sandbox.cpp  Sandbox.h
src/schism/Scripting/Lua/: Binding.h  Lua.cpp  Lua.h
src/schism/Scripting/Lua/Bindings/: Glm.h  Glm.hpp  MetaFuncHelpers.h  Utils.h
src/schism/Scripting/Lua/Bindings/Game/Ecs/: Bundle.h  EcsMetaFuncs.h  Plugin.h
src/schism/System/: Debug.h  Defines.h  FileIO.cpp  FileIO.h  Log.cpp  Log.h  Ptr.h  SyncQueue.h  System.h
src/schism/Util/: ScopedSignalConnection.h  Signal.cpp  Signal.h  SignalConnection.h  SingleSignal.h  String.h
